[project]
name = "agents_multi_tools"
version = "0.1.0"
description = "agents_multi_tools using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.9,<1.0.0"
]

[project.scripts]
agents_multi_tools = "agents_multi_tools.main:run"
run_crew = "agents_multi_tools.main:run"
train = "agents_multi_tools.main:train"
replay = "agents_multi_tools.main:replay"
test = "agents_multi_tools.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
